update http error pages

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -4,5 +4,21 @@
     "main description": "نحن نلتزم بتقديم خدمات شاملة ومميزة لضيوف الرحمن، حيث نجعل من رحلات العمرة والحج تجربة سهلة ومريحة بفضل خدماتنا المتكاملة التي تشمل حجز التذاكر، الإقامة، والنقل. نحرص على تلبية جميع احتياجاتكم بروح من المصداقية والاحترافية، لتعيشوا أجواء الإيمان والسكينة بكل طمأنينة.",
     "Coming Soon": "انتظرونا قريباً",
     "We are working hard to bring you the best experience. Stay tuned": "نعمل بجد واجتهاد لتقديم تجربة استثنائية تليق بتوقعاتكم. كونوا على تواصل معنا",
-    "For any inquiries, please contact us at": "للمزيد من المعلومات، يرجى التواصل معنا عبر"
+    "For any inquiries, please contact us at": "للمزيد من المعلومات، يرجى التواصل معنا عبر",
+    "Service Unavailable" : "الخدمة غير متوفرة",
+    "Service Unavailable message": "نعتذر، الخدمة التي تحاول الوصول إليها غير متوفرة حاليًا. قد يكون ذلك بسبب أعمال صيانة أو صعوبات تقنية غير متوقعة. يرجى المحاولة مرة أخرى لاحقًا.",
+    "Unauthorized": "غير مصرح",
+    "Unauthorized message": "نأسف، لكن ليس لديك الصلاحيات اللازمة للوصول إلى هذا المورد. يرجى التأكد من تسجيل الدخول باستخدام بيانات الاعتماد الصحيحة. إذا كنت تعتقد أن هناك خطأ، يرجى التواصل مع فريق الدعم للحصول على المساعدة.",
+    "Payment Required": "الدفع مطلوب",
+    "Payment Required message": "يتطلب هذا المورد دفعًا صالحًا للاستمرار. يرجى التأكد من تحديث تفاصيل الدفع الخاصة بك أو اختيار خيار دفع صالح. لأي استفسارات، لا تتردد في التواصل مع فريق دعم الفواتير الخاص بنا.",
+    "Forbidden": "محظور",
+    "Forbidden message": "الصفحة أو المورد الذي تبحث عنه غير موجود. قد يكون قد تم نقله أو إعادة تسميته أو حذفه. يرجى التحقق من صحة الرابط أو العودة إلى الصفحة الرئيسية للتنقل إلى الوجهة المطلوبة.",
+    "Not Found": "لم يتم العثور على الصفحة",
+    "Not Found message": "الصفحة أو المورد الذي تبحث عنه غير موجود. قد يكون قد تم نقله أو إعادة تسميته أو حذفه. يرجى التحقق من صحة الرابط أو العودة إلى الصفحة الرئيسية للتنقل إلى الوجهة المطلوبة",
+    "Page Expired": "الصفحة منتهية الصلاحية",
+    "Page Expired message": "الصفحة التي كنت تشاهدها انتهت صلاحيتها. يرجى تحديث الصفحة أو العودة إلى الخطوة السابقة والمحاولة مرة أخرى. إذا استمرت المشكلة، يرجى الاتصال بفريق الدعم للحصول على المساعدة.",
+    "Too Many Requests": "طلبات كثيرة جدًا",
+    "Too Many Requests message": "لقد قمت بإجراء عدد كبير جدًا من الطلبات في فترة زمنية قصيرة. يرجى الانتظار بضع لحظات والمحاولة مرة أخرى. إذا كنت تعتقد أن هناك خطأ، يرجى الاتصال بفريق الدعم للحصول على المساعدة.",
+    "Server Error": "خطأ في الخادم",
+    "Server Error message": "حدث خطأ غير متوقع في الخادم. تم إبلاغ فريقنا الفني، وهم يعملون على حل المشكلة. يرجى المحاولة مرة أخرى لاحقًا، ونعتذر عن أي إزعاج قد تسبب فيه ذلك."
 }
