Working on header

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -20,5 +20,17 @@
     "Too Many Requests": "طلبات كثيرة جدًا",
     "Too Many Requests message": "لقد قمت بإجراء عدد كبير جدًا من الطلبات في فترة زمنية قصيرة. يرجى الانتظار بضع لحظات والمحاولة مرة أخرى. إذا كنت تعتقد أن هناك خطأ، يرجى الاتصال بفريق الدعم للحصول على المساعدة.",
     "Server Error": "خطأ في الخادم",
-    "Server Error message": "حدث خطأ غير متوقع في الخادم. تم إبلاغ فريقنا الفني، وهم يعملون على حل المشكلة. يرجى المحاولة مرة أخرى لاحقًا، ونعتذر عن أي إزعاج قد تسبب فيه ذلك."
+    "Server Error message": "حدث خطأ غير متوقع في الخادم. تم إبلاغ فريقنا الفني، وهم يعملون على حل المشكلة. يرجى المحاولة مرة أخرى لاحقًا، ونعتذر عن أي إزعاج قد تسبب فيه ذلك.",
+    "header top bar title": "وكالة مراكش للعمرة",
+    "how we are ?": "من نحن؟",
+    "Booking instructions": "تعليمات الحجز",
+    "Privacy policy": "سياسة الخصوصية",
+    "Contact us": "تواصل معنا",
+    "FR": "الفرنسية",
+    "Omra packs": "باقات العمرة",
+    "Ramadan omra": "عمرة رمضان",
+    "Personalizd omra": "عمرة مخصصة",
+    "Hadj 2025": "الحج 2025",
+    "hero header title": "مرحبًا بكم في وكالتكم للحج و العمرة في مراكش،",
+    "hero header title 2": "وجهتكم المثالية لحجز رحلات العمرة والحج من مراكش، المغرب"
 }
