--- a/lang/ar.json
+++ b/lang/ar.json
@@ -32,5 +32,11 @@
     "Personalizd omra": "عمرة مخصصة",
     "Hadj 2025": "الحج 2025",
     "hero header title": "مرحبًا بكم في وكالتكم للحج و العمرة في مراكش،",
-    "hero header title 2": "وجهتكم المثالية لحجز رحلات العمرة والحج من مراكش، المغرب"
+    "hero header title 2": "وجهتكم المثالية لحجز رحلات العمرة والحج من مراكش، المغرب",
+    "hero header description": "نحن نلتزم بتقديم خدمات شاملة ومميزة لضيوف الرحمن، حيث نجعل من رحلات العمرة والحج تجربة سهلة ومريحة بفضل خدماتنا المتكاملة التي تشمل حجز التذاكر، الإقامة، والنقل. نحرص على تلبية جميع احتياجاتكم بروح من المصداقية والاحترافية، لتعيشوا أجواء الإيمان والسكينة بكل طمأنينة.",
+    "fast booking": "الحجز السريع",
+    "the month": "الشهر",
+    "travlers count": "عدد المسافرين",
+    "programe": "البرنامج",
+    "search": "بحث"
 }
