Hero header done

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -38,5 +38,6 @@
     "the month": "الشهر",
     "travlers count": "عدد المسافرين",
     "programe": "البرنامج",
-    "search": "بحث"
+    "search": "بحث",
+    "Request e-visa": "أطلب e-Visa"
 }
