--- a/lang/ar.json
+++ b/lang/ar.json
@@ -36,8 +36,15 @@
     "hero header description": "نحن نلتزم بتقديم خدمات شاملة ومميزة لضيوف الرحمن، حيث نجعل من رحلات العمرة والحج تجربة سهلة ومريحة بفضل خدماتنا المتكاملة التي تشمل حجز التذاكر، الإقامة، والنقل. نحرص على تلبية جميع احتياجاتكم بروح من المصداقية والاحترافية، لتعيشوا أجواء الإيمان والسكينة بكل طمأنينة.",
     "fast booking": "الحجز السريع",
     "the month": "الشهر",
-    "travlers count": "عدد المسافرين",
+    "chose the omra": "إختر العمرة",
+    "travlers count": "عدد المعتمرين",
     "programe": "البرنامج",
     "search": "بحث",
-    "Request e-visa": "أطلب e-Visa"
+    "Request e-visa": "أطلب e-Visa",
+    "Book Umrah from anywhere in Morocco": "احجز العمرة من أي مكان في المغرب",
+    "Effortless Booking Anywhere in Morocco": "نوفر لكم خدمات الحجز السلسة غبر الموقع أو الهاتف، أينما كنتم في المغرب، مع خيارات تناسب احتياجاتكم وظروفكم",
+    "Special packages and offers throughout the year": "باقات مميزة وعروض مستمرة طوال السنة",
+    "Exclusive Packages and Seasonal Offers at Competitive Prices": "نقدم لكم باقات مميزة وخدمات عالية الجودة بأسعار تنافسية، مع عروض استثنائية تناسب مختلف المواسم",
+    "24/7 support service":"خدمة دعم متوفرة 7/24",
+    "Our team is ready to answer all your inquiries and provide assistance at any time to ensure the comfort and tranquility of the pilgrims.": "فريقنا جاهز لللإجابة على جميع استفساراتكم وتقديم المساعدة في أي وقت لضمان راحة وطمإنينة ضيوف الرحمن"
 }
