--- a/lang/ar.json
+++ b/lang/ar.json
@@ -46,5 +46,7 @@
     "Special packages and offers throughout the year": "باقات مميزة وعروض مستمرة طوال السنة",
     "Exclusive Packages and Seasonal Offers at Competitive Prices": "نقدم لكم باقات مميزة وخدمات عالية الجودة بأسعار تنافسية، مع عروض استثنائية تناسب مختلف المواسم",
     "24/7 support service":"خدمة دعم متوفرة 7/24",
-    "Our team is ready to answer all your inquiries and provide assistance at any time to ensure the comfort and tranquility of the pilgrims.": "فريقنا جاهز لللإجابة على جميع استفساراتكم وتقديم المساعدة في أي وقت لضمان راحة وطمإنينة ضيوف الرحمن"
+    "Our team is ready to answer all your inquiries and provide assistance at any time to ensure the comfort and tranquility of the pilgrims.": "فريقنا جاهز لللإجابة على جميع استفساراتكم وتقديم المساعدة في أي وقت لضمان راحة وطمإنينة ضيوف الرحمن",
+    "welcome to our agency for the omrah in marrakech":"مرحباً بك في وكالتنا للعمرة في مراكش",
+    "Dedicated to Making Umrah and Hajj a Seamless Experience": "نحن نلتزم بتقديم خدمات شاملة ومميزة لضيوف الرحمن، حيث نجعل من رحلات العمرة والحج تجربة سهلة ومريحة بفضل خدماتنا المتكاملة التي تشمل حجز التذاكر، الإقامة"
 }
