Add Offer card with preview and fix translation

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -49,6 +49,17 @@
     "Our team is ready to answer all your inquiries and provide assistance at any time to ensure the comfort and tranquility of the pilgrims.": "فريقنا جاهز لللإجابة على جميع استفساراتكم وتقديم المساعدة في أي وقت لضمان راحة وطمإنينة ضيوف الرحمن",
     "welcome to our agency for the omrah in marrakech":"مرحباً بك في وكالتنا للعمرة في مراكش",
     "Dedicated to Making Umrah and Hajj a Seamless Experience": "نحن نلتزم بتقديم خدمات شاملة ومميزة لضيوف الرحمن، حيث نجعل من رحلات العمرة والحج تجربة سهلة ومريحة بفضل خدماتنا المتكاملة التي تشمل حجز التذاكر، الإقامة",
-    "Lorem ipsum":"هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى"
+    "Lorem ipsum":"هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
+    "Best Seller": "الأكثر مبيعًا",
+    "Upcoming flights": "الرحلات القادمة",
+    "Quick view": "رؤية سريعة",
+    "For a person": "للشخص",
+    "dh": "دم",
+    "Price varies depending on the size of the collection": "يختلف السعر حسب حجم المجموعة",
+    "Book now": "إحجـز الآن",
+    "Days": "أيام",
+    "day": "يوم",
+    "The Fast booking": "الحجز السريع",
+    "with": "مع"
 
 }
