working on help desk

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -60,6 +60,12 @@
     "Days": "أيام",
     "day": "يوم",
     "The Fast booking": "الحجز السريع",
-    "with": "مع"
+    "with": "مع",
+    "Customer Service Center": "مركز خدمة العملاء",
+    "We are Here to Help": "يسرنا تقديم الدعم الكامل لتلبية احتياجاتكم واستفساراتكم. إذا كان لديكم أي أسئلة أو استفسارات يمكنكم مراسلتنا عبر البريد الإلكتروني، وسنقوم بالرد عليكم في أقرب وقت ممكن.",
+    "cell pohne": "رقم الهاتف",
+    "home pohne": "الهاتف الأرضي",
+    "24/7/365 Support": "دعم 24/7/365",
+    "Live Chat": "دردشة المباشرة"
 
 }
