Add cursor pointer to quick view && add mission section

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -65,7 +65,16 @@
     "We are Here to Help": "يسرنا تقديم الدعم الكامل لتلبية احتياجاتكم واستفساراتكم. إذا كان لديكم أي أسئلة أو استفسارات يمكنكم مراسلتنا عبر البريد الإلكتروني، وسنقوم بالرد عليكم في أقرب وقت ممكن.",
     "cell pohne": "رقم الهاتف",
     "home pohne": "الهاتف الأرضي",
-    "24/7/365 Support": "دعم 24/7/365",
-    "Live Chat": "دردشة المباشرة"
-
+    "Support": "دعم",
+    "Live Chat": "دردشة المباشرة",
+    "Discover more": "اكتشف المزيد",
+    "About us": "من نحن",
+    "mission title": "نحن على مهمة لتمكين الفرق عن بعد",
+    "Our mission": "مهمتنا",
+    "mission description":"هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
+    "The numbers": "الأرقام",
+    "Raised": "تم جمعها",
+    "Companies": "الشركات",
+    "Deals Closed": "الصفقات المغلقة",
+    "Deals Generated": "الصفقات المولدة"
 }
