--- a/lang/ar.json
+++ b/lang/ar.json
@@ -76,5 +76,17 @@
     "Raised": "تم جمعها",
     "Companies": "الشركات",
     "Deals Closed": "الصفقات المغلقة",
-    "Deals Generated": "الصفقات المولدة"
+    "Deals Generated": "الصفقات المولدة",
+    "January Umrah": "عمرة يناير",
+    "February Umrah" : "عمرة فبراير",
+    "March Umrah" : "عمرة مارس",
+    "April Umrah" : "عمرة أبريل",
+    "May Umrah" : "عمرة مايو",
+    "June Umrah" : "عمرة يونيو",
+    "July Umrah" : "عمرة يوليوز",
+    "August Umrah" : "عمرة غشت",
+    "September Umrah" : "عمرة شتنبر",
+    "October Umrah" : "عمرة أكتوبر",
+    "November Umrah" : "عمرة نونبر",
+    "December Umrah" : "عمرة دجنبر"
 }
