--- a/lang/ar.json
+++ b/lang/ar.json
@@ -88,5 +88,8 @@
     "September Umrah" : "عمرة شتنبر",
     "October Umrah" : "عمرة أكتوبر",
     "November Umrah" : "عمرة نونبر",
-    "December Umrah" : "عمرة دجنبر"
+    "December Umrah" : "عمرة دجنبر",
+    "Our Services": "خدماتنا",
+    "Who are we?": "من نحن؟",
+    "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب"
 }
