--- a/lang/ar.json
+++ b/lang/ar.json
@@ -91,5 +91,6 @@
     "December Umrah" : "عمرة دجنبر",
     "Our Services": "خدماتنا",
     "Who are we?": "من نحن؟",
-    "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب"
+    "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب",
+    "Offer": "عرض"
 }
