Working on Offer page (Available offers)

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -57,6 +57,7 @@
     "dh": "دم",
     "Price varies depending on the size of the collection": "يختلف السعر حسب حجم المجموعة",
     "Book now": "إحجـز الآن",
+    "Booook now": "إحجــــــز الآن",
     "Days": "أيام",
     "day": "يوم",
     "The Fast booking": "الحجز السريع",
