--- a/lang/ar.json
+++ b/lang/ar.json
@@ -93,5 +93,6 @@
     "Our Services": "خدماتنا",
     "Who are we?": "من نحن؟",
     "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب",
-    "Offer": "عرض"
+    "Offer": "عرض",
+    "push here": "إضغط هنا"
 }
