--- a/lang/ar.json
+++ b/lang/ar.json
@@ -94,5 +94,6 @@
     "Who are we?": "من نحن؟",
     "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب",
     "Offer": "عرض",
-    "push here": "إضغط هنا"
+    "push here": "إضغط هنا",
+    "upcomming flights": "الرحلات القادمة"
 }
