Revert "Offer page working on offer card with prev (minimal)"
This reverts commit 9fc180c3a88d20a58105faa2c20b40fdfc51aaa8.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -94,6 +94,5 @@
     "Who are we?": "من نحن؟",
     "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب",
     "Offer": "عرض",
-    "push here": "إضغط هنا",
-    "upcomming flights": "الرحلات القادمة"
+    "push here": "إضغط هنا"
 }
