--- a/lang/ar.json
+++ b/lang/ar.json
@@ -5,7 +5,7 @@
     "Coming Soon": "انتظرونا قريباً",
     "We are working hard to bring you the best experience. Stay tuned": "نعمل بجد واجتهاد لتقديم تجربة استثنائية تليق بتوقعاتكم. كونوا على تواصل معنا",
     "For any inquiries, please contact us at": "للمزيد من المعلومات، يرجى التواصل معنا عبر",
-    "Service Unavailable" : "الخدمة غير متوفرة",
+    "Service Unavailable": "الخدمة غير متوفرة",
     "Service Unavailable message": "نعتذر، الخدمة التي تحاول الوصول إليها غير متوفرة حاليًا. قد يكون ذلك بسبب أعمال صيانة أو صعوبات تقنية غير متوقعة. يرجى المحاولة مرة أخرى لاحقًا.",
     "Unauthorized": "غير مصرح",
     "Unauthorized message": "نأسف، لكن ليس لديك الصلاحيات اللازمة للوصول إلى هذا المورد. يرجى التأكد من تسجيل الدخول باستخدام بيانات الاعتماد الصحيحة. إذا كنت تعتقد أن هناك خطأ، يرجى التواصل مع فريق الدعم للحصول على المساعدة.",
@@ -45,11 +45,11 @@
     "Effortless Booking Anywhere in Morocco": "نوفر لكم خدمات الحجز السلسة غبر الموقع أو الهاتف، أينما كنتم في المغرب، مع خيارات تناسب احتياجاتكم وظروفكم",
     "Special packages and offers throughout the year": "باقات مميزة وعروض مستمرة طوال السنة",
     "Exclusive Packages and Seasonal Offers at Competitive Prices": "نقدم لكم باقات مميزة وخدمات عالية الجودة بأسعار تنافسية، مع عروض استثنائية تناسب مختلف المواسم",
-    "24/7 support service":"خدمة دعم متوفرة 7/24",
+    "24/7 support service": "خدمة دعم متوفرة 7/24",
     "Our team is ready to answer all your inquiries and provide assistance at any time to ensure the comfort and tranquility of the pilgrims.": "فريقنا جاهز لللإجابة على جميع استفساراتكم وتقديم المساعدة في أي وقت لضمان راحة وطمإنينة ضيوف الرحمن",
-    "welcome to our agency for the omrah in marrakech":"مرحباً بك في وكالتنا للعمرة في مراكش",
+    "welcome to our agency for the omrah in marrakech": "مرحباً بك في وكالتنا للعمرة في مراكش",
     "Dedicated to Making Umrah and Hajj a Seamless Experience": "نحن نلتزم بتقديم خدمات شاملة ومميزة لضيوف الرحمن، حيث نجعل من رحلات العمرة والحج تجربة سهلة ومريحة بفضل خدماتنا المتكاملة التي تشمل حجز التذاكر، الإقامة",
-    "Lorem ipsum":"هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
+    "Lorem ipsum": "هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
     "Best Seller": "الأكثر مبيعًا",
     "Upcoming flights": "الرحلات القادمة",
     "Quick view": "رؤية سريعة",
@@ -72,28 +72,38 @@
     "About us": "من نحن",
     "mission title": "نحن على مهمة لتمكين الفرق عن بعد",
     "Our mission": "مهمتنا",
-    "mission description":"هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
+    "mission description": "هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
     "The numbers": "الأرقام",
     "Raised": "تم جمعها",
     "Companies": "الشركات",
     "Deals Closed": "الصفقات المغلقة",
     "Deals Generated": "الصفقات المولدة",
     "January Umrah": "عمرة يناير",
-    "February Umrah" : "عمرة فبراير",
-    "March Umrah" : "عمرة مارس",
-    "April Umrah" : "عمرة أبريل",
-    "May Umrah" : "عمرة مايو",
-    "June Umrah" : "عمرة يونيو",
-    "July Umrah" : "عمرة يوليوز",
-    "August Umrah" : "عمرة غشت",
-    "September Umrah" : "عمرة شتنبر",
-    "October Umrah" : "عمرة أكتوبر",
-    "November Umrah" : "عمرة نونبر",
-    "December Umrah" : "عمرة دجنبر",
+    "February Umrah": "عمرة فبراير",
+    "March Umrah": "عمرة مارس",
+    "April Umrah": "عمرة أبريل",
+    "May Umrah": "عمرة مايو",
+    "June Umrah": "عمرة يونيو",
+    "July Umrah": "عمرة يوليوز",
+    "August Umrah": "عمرة غشت",
+    "September Umrah": "عمرة شتنبر",
+    "October Umrah": "عمرة أكتوبر",
+    "November Umrah": "عمرة نونبر",
+    "December Umrah": "عمرة دجنبر",
     "Our Services": "خدماتنا",
     "Who are we?": "من نحن؟",
     "All Rights Reserved": "جميع الحقوق محفوظة لوكالة عمرة مراكش. قمنا بإنشاء هذا الموقع بكل حب",
     "Offer": "عرض",
     "push here": "إضغط هنا",
-    "upcomming flights": "الرحلات القادمة"
+    "upcomming flights": "الرحلات القادمة",
+    "our services": "خدماتنا",
+    "Hajj guide": "دليل الحج ",
+    "Umrah guide": "دليل العمرة",
+    "Learn about Mecca": "تعرّف على مكة المكرمة ",
+    "Get to know Medina": "تعرّف على المدينة المنورة",
+    "Privacy Policy": "سياسة الخصوصية",
+    "Payment Policy": "سياسة الدفع",
+    "Terms and Conditions": "الشروط والأحكام",
+    "Umrati partner program": "عمرتي Partner Program",
+    "Our blog": "مدونتنا"
 }
