--- a/lang/ar.json
+++ b/lang/ar.json
@@ -105,5 +105,27 @@
     "Payment Policy": "سياسة الدفع",
     "Terms and Conditions": "الشروط والأحكام",
     "Umrati partner program": "عمرتي Partner Program",
-    "Our blog": "مدونتنا"
+    "Our blog": "مدونتنا",
+    "confirmation & paimenent": "التأكيد والدفع",
+    "travelers": "المعتمرين",
+    "Pilgrim information": "معلومات المعتمر",
+    "first name":"الإسم الشخصي",
+    "last name":"الإسم العائلي",
+    "city":"المدينة",
+    "phone":"الهاتف",
+    "email": "البريد الإلكتروني",
+    "Add Payment Details": "إضافة تفاصيل الدفع",
+    "Book Now & Pay Later": "احجز الآن وادفع لاحقًا",
+    "Pay by Card": "الدفع بواسطة البطاقة",
+    "Pay via Cashplus": "الدفع عبر Cashplus",
+    "Duration": "المدة",
+    "Starts on": "يبدأ في",
+    "Ends on": "ينتهي في",
+    "No. of Travellers": "عدد المعتمرين",
+    "Price Details": "تفاصيل السعر",
+    "Traveller(s)": "المعتمر(ين)",
+    "Adult": "بالغ",
+    "Bank Charge": "رسوم البنك",
+    "Total": "المجموع",
+    "Pay by bank transfer": "الدفع عن طريق تحويل بنكي"
 }
