Add mobile placeholder screen

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -127,5 +127,6 @@
     "Adult": "بالغ",
     "Bank Charge": "رسوم البنك",
     "Total": "المجموع",
-    "Pay by bank transfer": "الدفع عن طريق تحويل بنكي"
+    "Pay by bank transfer": "الدفع عن طريق تحويل بنكي",
+    "Mobile version is loading": "تحميل نسخة الهاتف المحمول"
 }
