--- a/lang/ar.json
+++ b/lang/ar.json
@@ -128,5 +128,7 @@
     "Bank Charge": "رسوم البنك",
     "Total": "المجموع",
     "Pay by bank transfer": "الدفع عن طريق تحويل بنكي",
-    "Mobile version is loading": "تحميل نسخة الهاتف المحمول"
+    "Mobile version is loading": "تحميل نسخة الهاتف المحمول",
+    "Welcome to your Hajj and Umrah agency in Marrakech.": "مرحباً بكم في وكالتكم للحج والعمرة في مراكش.",
+    "Your ideal destination for booking Umrah and Hajj tours from Marrakech, Morocco": "وجهتكم المثالية لحجز رحلات العمرة، والحج من مراكش، المغرب"
 }
