fix slides and add drawer menu

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -130,5 +130,11 @@
     "Pay by bank transfer": "الدفع عن طريق تحويل بنكي",
     "Mobile version is loading": "تحميل نسخة الهاتف المحمول",
     "Welcome to your Hajj and Umrah agency in Marrakech.": "مرحباً بكم في وكالتكم للحج والعمرة في مراكش.",
-    "Your ideal destination for booking Umrah and Hajj tours from Marrakech, Morocco": "وجهتكم المثالية لحجز رحلات العمرة، والحج من مراكش، المغرب"
+    "Your ideal destination for booking Umrah and Hajj tours from Marrakech, Morocco": "وجهتكم المثالية لحجز رحلات العمرة، والحج من مراكش، المغرب",
+    "Umrah Packages":"باقات العمرة",
+    "Ramadan Umrah":"عمرة رمضان",
+    "Custom Umrah":"عمرة مخصصة",
+    "Hajj 2025":"الحج 2025",
+    "Request e-Visa":"أطلب e-Visa",
+    "Contact Us":"تواصل معنا"
 }
