--- a/lang/ar.json
+++ b/lang/ar.json
@@ -136,5 +136,6 @@
     "Custom Umrah":"عمرة مخصصة",
     "Hajj 2025":"الحج 2025",
     "Request e-Visa":"أطلب e-Visa",
-    "Contact Us":"تواصل معنا"
+    "Contact Us":"تواصل معنا",
+    "I would like to book this flight": "أرغب في حجز هذه الرحلة"
 }
