Update home page content

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -70,9 +70,9 @@
     "Live Chat": "دردشة المباشرة",
     "Discover more": "اكتشف المزيد",
     "About us": "من نحن",
-    "mission title": "نحن على مهمة لتمكين الفرق عن بعد",
+    "mission title": "OmraPlus وكالتك الموثوقة للحج والعمرة في المغرب",
     "Our mission": "مهمتنا",
-    "mission description": "هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النصوص العربي، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى",
+    "mission description": "OmraPlus هي وكالة أسفار متخصصة في تنظيم رحلات الحج والعمرة في المغرب، ملتزمة بتوفير تجربة دينية مريحة وآمنة لجميع الحجاج والمعتمرين. بفضل خبرتنا الواسعة وفريقنا المتخصص، نسعى إلى تسهيل رحلتكم إلى الديار المقدسة بأفضل الخدمات وأعلى معايير الجودة.",
     "The numbers": "الأرقام",
     "Raised": "تم جمعها",
     "Companies": "الشركات",
@@ -173,5 +173,26 @@
     "Medina": "المدينة المنورة",
     "View hotel photos": "مشاهدة صور الفندق",
     "Select room type": "اختر نوع الغرفة",
-    "Group discounts available" : "تخفيضات متاحة للمجموعات"
+    "Group discounts available" : "تخفيضات متاحة للمجموعات",
+    "Hajj Agency: The best offers and distinguished services for pilgrims to the House of Allah": "وكالة الحج: أفضل العروض والخدمات المميزة لحجاج بيت الله الحرام",
+    "With OmraPlus, we offer you the best Hajj packages at competitive prices and integrated services. We guarantee you a comfortable and easy Hajj experience under the supervision of a professional and experienced team. Book with us today and choose the best for your trip.": "مع OmraPlus، نقدم لكم أفضل عروض الحج بأسعار تنافسية وخدمات متكاملة. نضمن لكم تجربة حج مريحة وميسرة تحت إشراف فريق محترف وذو خبرة. احجزوا معنا اليوم واختاروا الأفضل لرحلتكم .",
+    "OmraPlus: Easy Umrah with special prices and integrated services": "OmraPlus: عمرة ميسرة بأسعار مميزة وخدمات متكاملة",
+    "Choose OmraPlus for a hassle-free Umrah! We offer you the best offers at competitive prices and integrated services for a comfortable and distinctive Umrah experience.": "اختاروا OmraPlus لعمرة خالية من المتاعب! نقدم لكم أفضل العروض بأسعار تنافسية وخدمات متكاملة لتجربة عمرة مريحة ومميزة.",
+    "about.omraplus": "OmraPlus هي وكالة أسفار متخصصة في تنظيم رحلات الحج والعمرة في المغرب، ملتزمة بتوفير تجربة دينية مريحة وآمنة لجميع الحجاج والمعتمرين.",
+    "about.experience": "بفضل خبرتنا الواسعة وفريقنا المتخصص، نسعى إلى تسهيل رحلتكم إلى الديار المقدسة بأفضل الخدمات وأعلى معايير الجودة.",
+    "about.mission": "هدفنا هو تسهيل رحلتكم وتوفير أقصى درجات الراحة، من خلال خدمات عالية الجودة تشمل استخراج التأشيرات، الإقامة الفاخرة، النقل المريح، والإرشاد الديني الشامل، لضمان تجربة لا تُنسى.",
+    "why.omraplus": "لماذا OmraPlus؟",
+    "why.various_packages": "باقات حج وعمرة متنوعة ومناسبة للجميع",
+    "why.various_packages.description": "نوفر مجموعة واسعة من باقات الحج والعمرة المصممة لتناسب مختلف الميزانيات، بدءًا من الرحلات الاقتصادية وحتى البرامج الفاخرة، مع مرونة كبيرة في الاختيار.",
+    "why.hotel_reservations": "حجوزات فندقية قريبة من الحرم",
+    "why.hotel_reservations.description": "نحرص على توفير أماكن إقامة راقية ومريحة قريبة من الحرم المكي والمسجد النبوي، لضمان سهولة الوصول إلى أماكن العبادة براحة تامة.",
+    "why.transport_services": "خدمات النقل الفاخر والمريح",
+    "why.transport_services.description": "نوفر وسائل نقل حديثة ومكيفة تشمل حافلات فاخرة وسيارات خاصة، لضمان تنقل آمن وسلس داخل المملكة العربية السعودية.",
+    "why.religious_guidance": "دعم وإرشاد ديني شامل",
+    "why.religious_guidance.description": "فريقنا من المشرفين والخبراء يقدمون إرشادات دينية مفصلة قبل وأثناء الرحلة، مع دروس توعوية حول مناسك الحج والعمرة لضمان أداء الشعائر بشكل صحيح وميسر.",
+    "why.customer_support": "خدمة عملاء متاحة على مدار الساعة",
+    "why.customer_support.description": "نحن متواجدون لخدمتكم والإجابة على جميع استفساراتكم في أي وقت، مع دعم متكامل قبل وأثناء وبعد الرحلة، لضمان تجربة خالية من المتاعب.",
+    "Our Blog – Your Comprehensive Guide to Hajj and Umrah": "مدونتنا – دليلك الشامل للحج والعمرة",
+    "Discover the latest articles and tips on Hajj and Umrah, learn important information, comprehensive guides, and new updates.":"اكتشف أحدث المقالات والنصائح حول الحج والعمرة، وتعرّف على المعلومات الهامة، والأدلة الشاملة، والتحديثات الجديدة",
+    "footer.description": "OmraPlus - وكالة أسفار للحج والعمرة في المغرب تقدم لكم تجربة حج وعمرة استثنائية من خلال خدمات متكاملة تشمل استخراج التأشيرات، حجوزات الفنادق القريبة من الحرم، النقل الفاخر، والإرشاد الديني لضمان أداء المناسك بكل سهولة وراحة. بفضل خبرتنا الواسعة وفريقنا المتخصص، نحرص على توفير باقات متنوعة تناسب جميع الميزانيات، مع ضمان أعلى معايير الجودة والراحة. سواء كنت تبحث عن رحلة اقتصادية أو تجربة فاخرة، فإننا نوفر لك كل ما تحتاجه لرحلة روحانية خالية من المتاعب. احجز الآن واستمتع برحلة  لا تُنسى مع خدمات  ومتميزة! ✨"
 }
