Work on dashboard & Update Auth UI

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -194,5 +194,27 @@
     "why.customer_support.description": "نحن متواجدون لخدمتكم والإجابة على جميع استفساراتكم في أي وقت، مع دعم متكامل قبل وأثناء وبعد الرحلة، لضمان تجربة خالية من المتاعب.",
     "Our Blog – Your Comprehensive Guide to Hajj and Umrah": "مدونتنا – دليلك الشامل للحج والعمرة",
     "Discover the latest articles and tips on Hajj and Umrah, learn important information, comprehensive guides, and new updates.":"اكتشف أحدث المقالات والنصائح حول الحج والعمرة، وتعرّف على المعلومات الهامة، والأدلة الشاملة، والتحديثات الجديدة",
-    "footer.description": "OmraPlus - وكالة أسفار للحج والعمرة في المغرب تقدم لكم تجربة حج وعمرة استثنائية من خلال خدمات متكاملة تشمل استخراج التأشيرات، حجوزات الفنادق القريبة من الحرم، النقل الفاخر، والإرشاد الديني لضمان أداء المناسك بكل سهولة وراحة. بفضل خبرتنا الواسعة وفريقنا المتخصص، نحرص على توفير باقات متنوعة تناسب جميع الميزانيات، مع ضمان أعلى معايير الجودة والراحة. سواء كنت تبحث عن رحلة اقتصادية أو تجربة فاخرة، فإننا نوفر لك كل ما تحتاجه لرحلة روحانية خالية من المتاعب. احجز الآن واستمتع برحلة  لا تُنسى مع خدمات  ومتميزة! ✨"
+    "footer.description": "OmraPlus - وكالة أسفار للحج والعمرة في المغرب تقدم لكم تجربة حج وعمرة استثنائية من خلال خدمات متكاملة تشمل استخراج التأشيرات، حجوزات الفنادق القريبة من الحرم، النقل الفاخر، والإرشاد الديني لضمان أداء المناسك بكل سهولة وراحة. بفضل خبرتنا الواسعة وفريقنا المتخصص، نحرص على توفير باقات متنوعة تناسب جميع الميزانيات، مع ضمان أعلى معايير الجودة والراحة. سواء كنت تبحث عن رحلة اقتصادية أو تجربة فاخرة، فإننا نوفر لك كل ما تحتاجه لرحلة روحانية خالية من المتاعب. احجز الآن واستمتع برحلة  لا تُنسى مع خدمات  ومتميزة! ✨",
+
+    "auth.failed" : "بيانات الاعتماد هذه لا تتطابق مع سجلاتنا.",
+    "auth.password" : "كلمة المرور المقدمة غير صحيحة.",
+    "auth.throttle" : "محاولات تسجيل دخول كثيرة جداً يرجى المحاولة مرة أخرى خلال :ثواني",
+
+    "pagination.previous": "&laquo; السابق",
+    "pagination.next": "التالي &raquo;",
+
+    "password.reset" : "Your password has been reset.",
+    "password.sent" : "We have emailed your password reset link.",
+    "password.throttled" : "Please wait before retrying.",
+    "password.token" : "This password reset token is invalid.",
+    "password.user" : "We can't find a user with that email address.",
+    "Dashboard": "لوحة التحكم",
+    "Hajj Flights": "رحلات الحج",
+    "Programs": "البرامج",
+    "Hotels": "الفنادق",
+    "Airlines": "خطوط الطيران",
+    "Pricing": "الأسعار",
+    "Discounts": "الخصومات",
+    "reservations": "الحجوزات",
+    "Not confirmed yet": "لم يتم تأكيدها بعد"
 }
