Working on  dashboard Ui

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -165,6 +165,7 @@
     "You have a question?":"لديك استفسار",
     "Economy Program": "البرنامج الإقتصادي",
     "Seats": "مقاعد",
+    "Seats count": "عدد المقاعد",
     "No Meals": "بدون وجبات",
     "Meals included": "الوجبات مشمولة",
     "Meters from the Haram": "متر عن الحرم",
@@ -223,5 +224,37 @@
     "Not confirmed yet": "لم يتم تأكيدها بعد",
     "and": "و",
     "users": "المستخدمين",
-    "Logout": "خروج"
+    "Logout": "خروج",
+    "Name": "الاسم",
+    "Address": "العنوان",
+    "Distance from macca": "المسافة من مكة المكرمة",
+    "Save": "حفظ",
+    "meter": "متر",
+    "Add": "إضافة",
+    "Hotel photos": "صور الفندق",
+    "Primary photo": "صورة الفندق الرئيسية",
+    "Rooms": "الغرف",
+    "Code": "الكود",
+    "Type": "النوع",
+    "percentage": "نسبة مئوية",
+    "fixed": "ثابت",
+    "Value": "القيمة",
+    "Categories": "الأقسام",
+    "Flights Categories": "أقسام الرحلات",
+    "Category": "القسم",
+    "Room": "الغرفة",
+    "Program": "البرنامج",
+    "Price before discount": "السعر قبل الخصم",
+    "Price after discount": "السعر بعد الخصم",
+    "Flight": "الرحلة",
+    "Hotel in macca": "الفندق في مكة المكرمة",
+    "Hotel in medina": "الفندق في المدينة المنورة",
+    "Economic": "إقتصادي",
+    "Title": "العنوان",
+    "Going date": "تاريخ الذهاب",
+    "Return date": "تاريخ العودة",
+    "Description": "الوصف",
+    "Recomanded": "موصى به",
+    "Aireline": "خط الطيران",
+    "Fligth Description": "وصف الرحلة"
 }
