Working on some CRUDS
- Category
- Hotels
- Rooms
- Discounts
- Airlines

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -253,5 +253,12 @@
     "Description": "الوصف",
     "Recomanded": "موصى به",
     "Aireline": "خط الطيران",
-    "Fligth Description": "وصف الرحلة"
+    "Fligth Description": "وصف الرحلة",
+    "Edit Room": "تعديل الغرفة",
+    "Edit": "تعديل",
+    "City": "المدينة",
+    "Cansel": "إلغاء",
+    "Edit Category": "تعديل القسم",
+    "Omra": "عمرة",
+    "Hajj": "حج"
 }
