Update flights creation Form

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -260,5 +260,6 @@
     "Cansel": "إلغاء",
     "Edit Category": "تعديل القسم",
     "Omra": "عمرة",
-    "Hajj": "حج"
+    "Hajj": "حج",
+    "Fligth photos": "صور الرحلة"
 }
