working on text editor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -229,7 +229,7 @@
     "meter": "متر",
     "Add": "إضافة",
     "Hotel photos": "صور الفندق",
-    "Primary photo": "صورة الفندق الرئيسية",
+    "Primary photo": "الصورة الرئيسية",
     "Rooms": "الغرف",
     "Code": "الكود",
     "Type": "النوع",
