Create flight & program

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -261,5 +261,6 @@
     "Edit Category": "تعديل القسم",
     "Omra": "عمرة",
     "Hajj": "حج",
-    "Fligth photos": "صور الرحلة"
+    "Fligth photos": "صور الرحلة",
+    "New flight": "رحلة جديدة"
 }
