Adding datatable logic

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -290,5 +290,6 @@
     "Role": "الدور",
     "Room type": "نوع الغرفة",
     "New pricing": "تسعيرة جديدة",
-    "Room pricings": "تسعيرات الغرف"
+    "Room pricings": "تسعيرات الغرف",
+    "Search": "بحث"
 }
