Added orders chart to dashboard home

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -291,5 +291,7 @@
     "Room type": "نوع الغرفة",
     "New pricing": "تسعيرة جديدة",
     "Room pricings": "تسعيرات الغرف",
-    "Search": "بحث"
+    "Search": "بحث",
+    "reservations tracking": "تتبع الحجوزات",
+    "last 10 reservations": "آخر 10 حجوزات"
 }
