Updating checkout layout

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -293,5 +293,18 @@
     "Room pricings": "تسعيرات الغرف",
     "Search": "بحث",
     "reservations tracking": "تتبع الحجوزات",
-    "last 10 reservations": "آخر 10 حجوزات"
+    "last 10 reservations": "آخر 10 حجوزات",
+    "Pilgrims count": "عدد المعتمرين",
+    "Secure Your Hajj & Umrah Journey Today – Book Now & Pay Later! Limited Spots Available. Reserve Your Place with Ease!": "آمن رحلتك للحج والعمرة اليوم - احجز الآن وادفع لاحقًا! الأماكن محدودة. احجز مكانك بسهولة!",
+    "Book Your Hajj & Umrah Trip Today – Pay Securely by Bank Transfer! Reserve Your Spot Now & Pay Later with Ease!": "احجز رحلتك للحج والعمرة اليوم - ادفع بأمان عن طريق التحويل البنكي! احجز مكانك الآن وادفع لاحقًا بسهولة! 🕋✨",
+    "Plan Your Sacred Journey Now – Pay Conveniently via Cashplus! Limited Spots Available!": "خطط لرحلتك المقدسة الآن - ادفع بسهولة عبر Cashplus! الأماكن محدودة!",
+    "Easy Booking, Secure Payments – Reserve Your Trip & Pay by Card Today!": "حجز سهل، دفع آمن - احجز رحلتك وادفع بواسطة البطاقة اليوم!",
+    "Bank name": "اسم البنك",
+    "Account Number": "رقم الحساب",
+    "IBAN number": "رقم الآيبان",
+    "SWIFT number": "رقم السويفت",
+    "Please send a photo of the receipt to the following number to confirm the payment.": "يرجى إرسال صورة من الإيصال إلى الرقم التالي لتأكيد الدفع.",
+    "Card number": "رقم البطاقة",
+    "Expiry date": "تاريخ الانتهاء",
+    "CVC code": "رمز CVC"
 }
